<resources>
    <string name="app_name">ShoeStore</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">register</string>

    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- Strings related to welcome -->
    <string name="welcome_intro">Hi!</string>
    <string name="welcome_details">Welcome to my Shoe Store</string>
    <string name="next_btn">Next</string>
    <string name="prev_btn">Previous</string>
    <string name="enter_btn">Enter</string>
    <string name="instructionTitle">HOW TO USE THE APP</string>
    <string name="instructionDetails">Simply press ENTER , then look for something you like and buy it. \n\nBut most importantly don\'t expect getting it xD</string>
    <string name="login_fragment">Login</string>
    <string name="welcome_fragment">Welcome</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shoe_details_fragment">Shoe Details</string>
    <string name="home_fragment">Home</string>
    <string name="instruction_fragment">Instruction</string>
    <string name="dollar_sign">%s \$</string>
    <string name="size">Size\n %s</string>
    <string name="splash_fragment">Splash</string>
    <string name="enter_shoe_name">Enter Shoe Name</string>
    <string name="enter_shoe_company_name">Enter Shoe Company Name</string>
    <string name="enter_shoe_description">Enter Shoe Description</string>
    <string name="enter_shoe_size">Enter Shoe Size</string>
    <string name="enter_shoe_price">Enter Shoe Price</string>
    <string name="enter_shoe_image_url">Enter Shoe Image URL</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>


</resources>
