<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="detailsViewModel"
            type="com.udacity.shoestore.screens.details.DetailsViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!-- i guess u wanted me to change this to linearlayout instead of constrain ( which i used before just to practice ) -->

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/fragment_horizontal_margin"
            android:paddingTop="@dimen/fragment_vertical_margin"
            android:paddingRight="@dimen/fragment_horizontal_margin"
            android:paddingBottom="@dimen/fragment_vertical_margin"
            tools:context=".screens.login.LoginFragment">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_shoe_name"
                android:text="@={detailsViewModel.name}"
                android:inputType="text"
                android:minHeight="48dp"
                android:selectAllOnFocus="true"
                 />

            <EditText
                android:id="@+id/company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={detailsViewModel.company}"

                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/enter_shoe_company_name"
                android:inputType="text"
                android:minHeight="48dp"
                />

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={detailsViewModel.description}"

                android:hint="@string/enter_shoe_description"
                android:inputType="text"
                android:minHeight="48dp"
                />

            <EditText
                android:id="@+id/size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@={detailsViewModel.size}"

                android:layout_marginBottom="8dp"
                android:hint="@string/enter_shoe_size"
                android:inputType="number"
                android:minHeight="48dp"
                />

            <EditText
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_shoe_price"
                android:text="@={detailsViewModel.price}"
                android:inputType="number"
                android:minHeight="48dp"
                />

            <EditText
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@={detailsViewModel.url}"

                android:hint="@string/enter_shoe_image_url"
                android:inputType="textUri"
                android:minHeight="48dp" />

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:backgroundTint="@color/colorAccent"
                android:onClick="@{()->detailsViewModel.onSubmitClick()}"
                android:text="@string/submit"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </ScrollView>
</layout>